--- a/doflake/source/css/style.styl
+++ b/doflake/source/css/style.styl
@@ -1,9 +1,9 @@
- body {
-   background-image:url(https://cdn.jsdelivr.net/gh/doflake/Picture/Background/1.png);
-   background-repeat:no-repeat;
-   background-attachment:fixed;
-   background-size: 100% 100%;
- }
+//  body {
+//    background-image:url(https://cdn.jsdelivr.net/gh/doflake/Picture/Background/2.jpg);
+//    background-repeat:no-repeat;
+//    background-attachment:fixed;
+//    background-size: 100% 100%;
+//  }
 
 .container {
   max-width: 960px;
