--- a/Doflake V1.0.2/layout/layout.ejs
+++ b/Doflake V1.0.2/layout/layout.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+  <link rel="stylesheet" href="<%- config.root %>font\font-awesome-4.7.0\css\font-awesome.min.css">
   <%- partial('_partial/head') %>
   <body>   
     <div class="container">
